k8s/n8n_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:1.42.1
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.7
          command:
            - "/cloud_sql_proxy"
            - "-instances=autonomous-routing:us-central1:n8n-postgres=tcp:5432"
            - "-credential_file=/secrets/cloudsql/credentials.json"
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
              ephemeral-storage: 1Gi
            limits:
              ephemeral-storage: 1Gi
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-storage
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
