k8s/testingpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pg-client
spec:
  containers:
    - name: psql
      image: postgres:15
      command: ["sleep", "3600"]
