k8s/sq-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
spec:
  selector:
    app: cloudsql-proxy
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
